[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sameh-statusline"
version = "1.0.0"
description = "A powerline-style status bar for Claude Code with rich git info, stack detection, context visualization, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sameh Mohamed" },
]
keywords = [
    "claude",
    "claude-code",
    "statusline",
    "terminal",
    "powerline",
    "nerd-font",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/samehkamaleldin/sameh-statusline"
Repository = "https://github.com/samehkamaleldin/sameh-statusline"
Issues = "https://github.com/samehkamaleldin/sameh-statusline/issues"

[project.scripts]
sameh-statusline = "statusline:main"

[tool.setuptools]
py-modules = ["statusline"]
